rolling timeout on actor passivation

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -24,6 +24,9 @@ align {
     {code = "<-", owner = "Enumerator.Generator"}
     {code = "->", owner = "Term.ApplyInfix"}
     {code = "=", owner = "(Enumerator.Generator|Param|Assign|Term.Arg.Named|Enumerator.Val|Defn.(Va(l|r)|Def|Type))"}
+    {code = "+="}
+    {code = "-="}
+    {code = "*="}
   ]
 }
 
