serialize source events to Protobuf

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,5 +1,14 @@
 akka {
-    actor.allow-java-serialization = on
+    actor {
+        serializers {
+            java = "akka.serialization.JavaSerializer"
+            proto = "akka.remote.serialization.ProtobufSerializer"
+        }
+
+        serialization-bindings {
+            "com.google.protobuf.Message" = proto
+        }
+    }
 
     persistence {
         journal.plugin = "cassandra-journal"
