scalaPB for protobuf and serdes

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,12 +1,10 @@
 akka {
     actor {
         serializers {
-            java = "akka.serialization.JavaSerializer"
-            proto = "akka.remote.serialization.ProtobufSerializer"
+          todo-serializer = "me.anzop.todo.TodoSerializer"
         }
-
         serialization-bindings {
-            "com.google.protobuf.Message" = proto
+          "scalapb.GeneratedMessage" = todo-serializer
         }
     }
 
