--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,26 +1,24 @@
 akka {
-    actor {
-        serializers {
-          todo-serializer = "me.anzop.todo.TodoSerializer"
-        }
-        serialization-bindings {
-          "scalapb.GeneratedMessage" = todo-serializer
-        }
+  actor {
+    serializers.todo-serializer = "me.anzop.todo.TodoSerializer"
+    serialization-bindings {
+      "scalapb.GeneratedMessage" = todo-serializer
     }
+  }
 
-    persistence {
-        journal.plugin = "cassandra-journal"
-        snapshot-store.plugin = "cassandra-snapshot-store"
+  persistence {
+    journal.plugin = "cassandra-journal"
+    snapshot-store.plugin = "cassandra-snapshot-store"
 
-        cassandra {
-            journal {
-                keyspace-autocreate = true
-                tables-autocreate = true
-            }
-            snapshot {
-                keyspace-autocreate = true
-                tables-autocreate = true
-            }
-        }
+    cassandra {
+      journal {
+        keyspace-autocreate = true
+        tables-autocreate = true
+      }
+      snapshot {
+        keyspace-autocreate = true
+        tables-autocreate = true
+      }
     }
+  }
 }
