--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,6 @@
 akka {
   actor {
-    serializers.todo-serializer = "me.anzop.todo.TodoSerializer"
+    serializers.todo-serializer = "me.anzop.todo.actor.TodoSerializer"
     serialization-bindings {
       "scalapb.GeneratedMessage" = todo-serializer
     }
