--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,7 +1,7 @@
 test {
   akka {
     actor {
-      serializers.todo-serializer = "me.anzop.todo.actor.TodoSerializer"
+      serializers.todo-serializer = "todoapp.actor.TodoSerializer"
       serialization-bindings {
         "scalapb.GeneratedMessage" = todo-serializer
       }
